@@ -4,7 +4,7 @@ import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.net.URI;
+import java.net.URLEncoder;
 import java.util.Set;
 
 import javax.ws.rs.GET;
@@ -59,8 +59,7 @@ public class TwitterCountResource {
 		// ##############################################
 		String retval=null;
 		try {
-	        URI countUri = new URI(url + "/api/v1/messages/count?q=" + query).normalize();
-	        URL countUrl =  countUri.normalize().toURL();
+	        URL countUrl = new URL(url + "/api/v1/messages/count?q=" + URLEncoder.encode(query));
 	        HttpURLConnection urlConnection = (HttpURLConnection) countUrl.openConnection();
 			urlConnection.setConnectTimeout(20000);
 			urlConnection.setReadTimeout(20000);
